--- a/todo.txt
+++ b/todo.txt
@@ -2,11 +2,30 @@ bugs:
 - bug with finish
 
 todo:
-- money
-- save
+- increase speed on level
+- projection on enemy
+- rush mode
+- money(diamond)
+- result screen
 - ads
-- mainmenu sound
+- (?)mainmenu sound
 - vibro
+https://assetstore.unity.com/packages/tools/integration/nice-vibrations-108559
 - ui
+- save check
 - texture
+- change enemy scale
 - effects
+
+assets:
+- diamond
+https://assetstore.unity.com/packages/3d/props/simple-gems-ultimate-animated-customizable-pack-73764
+- gradient
+- finish
+- field texture
+- enemy
+https://assetstore.unity.com/packages/2d/textures-materials/floors/essential-grounds-47099
+- player
+- ui
+https://assetstore.unity.com/packages/2d/gui/icons/simple-ui-elements-53276
+https://assetstore.unity.com/packages/2d/gui/icons/simple-icon-pastel-tone-107568
